# Music_anisotropy

./: .gitignore  INSTALL-LINUX.sh  INSTALL-MAC.command  INSTALL-WINDOWS.bat  README.md  START-Anisotropia.bat  START-Anisotropia.command  START-Anisotropia.sh  pyproject.toml  requirements-app.txt  run.bat
.circleci/: config.yml
anisotropia/: metrics.py  parsing.py  report.py  visualizations.py  windowing.py
corpus/fixtures/anisotropy_regression/: alternating_up_down_same_axis.xml  balanced_four_directions.xml  contrary_motion_symmetric.xml  dense_events_no_direction.xml  directional_change_by_window.xml  oblique_motion.xml  parallel_ascending_parts.xml  pitch_inversion_same_rhythm.xml  sparse_strong_direction.xml  static_repetition.xml  time_stretched_same_contour.xml  (+3 more)
corpus/reference_outputs/: SYNTH_GRAND_STAFF_TWO_PARTS.json  SYNTH_MINIMAL_ASCENDING.json  SYNTH_MINIMAL_TWO_PARTS.json  checksums.sha256
corpus/reports/: anisotropy_regression_inspection.json  anisotropy_regression_inspection.md
corpus/scripts/: create_anisotropy_regression_fixtures.py  inspect_anisotropy_regression.py
docs/: ANISOTROPY_REGRESSION_FIXTURES.md  anisotropia_90_rubric.md  anisotropia_current_rating.md  cleanup_inventory.md  cleanup_report.md
instalers/windows/: INSTALL.bat  Install-Anisotropia.ps1  README.md  config.ps1
install/: README.md
install/linux/: install.sh
install/macos/: install.sh
install/windows/: Install-Anisotropia.ps1  install-and-run.bat
tests/: test_anisotropy_regression_fixtures.py  test_metrics_additional.py  test_parsing_additional.py
(+1 files in other folders)
