[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anisotropia"
version = "2.4.0"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "streamlit>=1.28.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "music21>=9.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "openpyxl>=3.1.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
source = ["anisotropia"]
omit = ["anisotropia/visualizations.py"]

[tool.coverage.report]
fail_under = 78
show_missing = true

[tool.setuptools.packages.find]
include = ["anisotropia*"]
exclude = ["corpus*", "archive*", "installers*", "tests*", "docs*", "benchmarks*"]
